# Five-qubits-with-Pauli-errors

./: LICENSE  README.md  environment.yml  pixi.toml  pyproject.toml
scripts/: plot_p_dependence.ipynb  plot_p_dependence.py  stepwise_circuit.ipynb
